fix: align the help button horizontally relative to the label: by Nic

--- a/frontend/app/styles/admin/admin.scss
+++ b/frontend/app/styles/admin/admin.scss
@@ -47,7 +47,7 @@ gray85: #FAFDFF
   .custom-form{
     .help-button{
       position: relative;
-      top: -6px;
+      top: 0;
       cursor: pointer;
     }
   }
